fix cart overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2806,6 +2806,7 @@ a {
       margin-bottom: 35px; } }
 
 .cart__content-wrapper {
+  overflow-x: hidden;
   padding: 20px;
   background-color: #fff;
   -webkit-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -2814,11 +2815,9 @@ a {
     .cart__content-wrapper {
       padding: 35px; } }
 
-.cart__content {
-  overflow-x: hidden; }
-  @media (min-width: 992px) {
-    .cart__content {
-      padding: 10px; } }
+@media (min-width: 992px) {
+  .cart__content {
+    padding: 10px; } }
 
 .cart__items-list {
   padding-bottom: 20px; }
